RESOLVED FIXED 212897
REGRESSION(r262254?): [WPE] imported/w3c/web-platform-tests/webxr/idlharness.https.window.html is failing
https://bugs.webkit.org/show_bug.cgi?id=212897
Summary REGRESSION(r262254?): [WPE] imported/w3c/web-platform-tests/webxr/idlharness....
Diego Pino
Reported 2020-06-08 04:32:43 PDT
The test started failing at: r262250 NOERROR [r262251-r262254] UNKNOWN r262255 TEXT (Expected: PASS) Possibly due to r262254 which re-synced WPT tests but didn't re-synced WebXR tests since they're skipped in the general TestExpectations. Diff: https://build.webkit.org/results/WPE%20Linux%2064-bit%20Release%20(Tests)/r262704%20(18495)/imported/w3c/web-platform-tests/webxr/idlharness.https.window-diff.txt --- /home/buildbot/wpe/wpe-linux-64-release-tests/build/layout-test-results/imported/w3c/web-platform-tests/webxr/idlharness.https.window-expected.txt +++ /home/buildbot/wpe/wpe-linux-64-release-tests/build/layout-test-results/imported/w3c/web-platform-tests/webxr/idlharness.https.window-actual.txt @@ -18,22 +18,15 @@ PASS Navigator includes NavigatorCookies: member names are unique PASS Navigator includes NavigatorPlugins: member names are unique PASS Navigator includes NavigatorConcurrentHardware: member names are unique -PASS XR interface: existence and properties of interface object -PASS XR interface object length -PASS XR interface object name -PASS XR interface: existence and properties of interface prototype object -PASS XR interface: existence and properties of interface prototype object's "constructor" property -PASS XR interface: existence and properties of interface prototype object's @@unscopables property -PASS XR interface: operation isSessionSupported(XRSessionMode) -PASS XR interface: operation requestSession(XRSessionMode, XRSessionInit) -PASS XR interface: attribute ondevicechange -PASS XR must be primary interface of navigator.xr -PASS Stringification of navigator.xr -PASS XR interface: navigator.xr must inherit property "isSessionSupported(XRSessionMode)" with the proper type -PASS XR interface: calling isSessionSupported(XRSessionMode) on navigator.xr with too few arguments must throw TypeError -PASS XR interface: navigator.xr must inherit property "requestSession(XRSessionMode, XRSessionInit)" with the proper type -PASS XR interface: calling requestSession(XRSessionMode, XRSessionInit) on navigator.xr with too few arguments must throw TypeError -PASS XR interface: navigator.xr must inherit property "ondevicechange" with the proper type +FAIL XRSystem interface: existence and properties of interface object assert_own_property: self does not have own property "XRSystem" expected property "XRSystem" missing +FAIL XRSystem interface object length assert_own_property: self does not have own property "XRSystem" expected property "XRSystem" missing +FAIL XRSystem interface object name assert_own_property: self does not have own property "XRSystem" expected property "XRSystem" missing +FAIL XRSystem interface: existence and properties of interface prototype object assert_own_property: self does not have own property "XRSystem" expected property "XRSystem" missing +FAIL XRSystem interface: existence and properties of interface prototype object's "constructor" property assert_own_property: self does not have own property "XRSystem" expected property "XRSystem" missing +FAIL XRSystem interface: existence and properties of interface prototype object's @@unscopables property assert_own_property: self does not have own property "XRSystem" expected property "XRSystem" missing +FAIL XRSystem interface: operation isSessionSupported(XRSessionMode) assert_own_property: self does not have own property "XRSystem" expected property "XRSystem" missing +FAIL XRSystem interface: operation requestSession(XRSessionMode, optional XRSessionInit) assert_own_property: self does not have own property "XRSystem" expected property "XRSystem" missing +FAIL XRSystem interface: attribute ondevicechange assert_own_property: self does not have own property "XRSystem" expected property "XRSystem" missing PASS XRSession interface: existence and properties of interface object PASS XRSession interface object length PASS XRSession interface object name @@ -43,7 +36,7 @@ PASS XRSession interface: attribute visibilityState PASS XRSession interface: attribute renderState PASS XRSession interface: attribute inputSources -PASS XRSession interface: operation updateRenderState(XRRenderStateInit) +PASS XRSession interface: operation updateRenderState(optional XRRenderStateInit) PASS XRSession interface: operation requestReferenceSpace(XRReferenceSpaceType) PASS XRSession interface: operation requestAnimationFrame(XRFrameRequestCallback) PASS XRSession interface: operation cancelAnimationFrame(long) @@ -160,10 +153,16 @@ PASS XRInputSourceArray interface: existence and properties of interface prototype object's @@unscopables property PASS XRInputSourceArray interface: iterable<XRInputSource> PASS XRInputSourceArray interface: attribute length -PASS XRWebGLLayer interface: existence and properties of interface object +FAIL XRLayer interface: existence and properties of interface object assert_own_property: self does not have own property "XRLayer" expected property "XRLayer" missing +FAIL XRLayer interface object length assert_own_property: self does not have own property "XRLayer" expected property "XRLayer" missing +FAIL XRLayer interface object name assert_own_property: self does not have own property "XRLayer" expected property "XRLayer" missing +FAIL XRLayer interface: existence and properties of interface prototype object assert_own_property: self does not have own property "XRLayer" expected property "XRLayer" missing +FAIL XRLayer interface: existence and properties of interface prototype object's "constructor" property assert_own_property: self does not have own property "XRLayer" expected property "XRLayer" missing +FAIL XRLayer interface: existence and properties of interface prototype object's @@unscopables property assert_own_property: self does not have own property "XRLayer" expected property "XRLayer" missing +FAIL XRWebGLLayer interface: existence and properties of interface object assert_own_property: self does not have own property "XRLayer" expected property "XRLayer" missing PASS XRWebGLLayer interface object length PASS XRWebGLLayer interface object name -PASS XRWebGLLayer interface: existence and properties of interface prototype object +FAIL XRWebGLLayer interface: existence and properties of interface prototype object assert_own_property: self does not have own property "XRLayer" expected property "XRLayer" missing PASS XRWebGLLayer interface: existence and properties of interface prototype object's "constructor" property PASS XRWebGLLayer interface: existence and properties of interface prototype object's @@unscopables property PASS XRWebGLLayer interface: attribute antialias @@ -205,6 +204,13 @@ PASS XRReferenceSpaceEvent interface: existence and properties of interface prototype object's @@unscopables property PASS XRReferenceSpaceEvent interface: attribute referenceSpace PASS XRReferenceSpaceEvent interface: attribute transform +FAIL XRPermissionStatus interface: existence and properties of interface object assert_own_property: self does not have own property "XRPermissionStatus" expected property "XRPermissionStatus" missing +FAIL XRPermissionStatus interface object length assert_own_property: self does not have own property "XRPermissionStatus" expected property "XRPermissionStatus" missing +FAIL XRPermissionStatus interface object name assert_own_property: self does not have own property "XRPermissionStatus" expected property "XRPermissionStatus" missing +FAIL XRPermissionStatus interface: existence and properties of interface prototype object assert_own_property: self does not have own property "XRPermissionStatus" expected property "XRPermissionStatus" missing +FAIL XRPermissionStatus interface: existence and properties of interface prototype object's "constructor" property assert_own_property: self does not have own property "XRPermissionStatus" expected property "XRPermissionStatus" missing +FAIL XRPermissionStatus interface: existence and properties of interface prototype object's @@unscopables property assert_own_property: self does not have own property "XRPermissionStatus" expected property "XRPermissionStatus" missing +FAIL XRPermissionStatus interface: attribute granted assert_own_property: self does not have own property "XRPermissionStatus" expected property "XRPermissionStatus" missing PASS Navigator interface: attribute xr PASS Navigator interface: navigator must inherit property "xr" with the proper type
Attachments
Patch (12.70 KB, patch)
2020-06-10 08:28 PDT, Sergio Villar Senin
youennf: review+
Sergio Villar Senin
Comment 1 2020-06-08 05:34:01 PDT
I'll take a look
Sergio Villar Senin
Comment 2 2020-06-10 08:28:06 PDT
Sergio Villar Senin
Comment 3 2020-06-19 00:02:35 PDT
Ping reviewers
Sergio Villar Senin
Comment 4 2020-06-19 07:35:47 PDT
Radar WebKit Bug Importer
Comment 5 2020-06-19 07:36:16 PDT
Note You need to log in before you can comment on or make changes to this bug.