REGRESSION(r262254?): [WPE] imported/w3c/web-platform-tests/webxr/idlharness.https.window.html is failing https://bugs.webkit.org/show_bug.cgi?id=212897

Reviewed by Youenn Fablet.

LayoutTests/imported/w3c:

* web-platform-tests/webxr/idlharness.https.window-expected.txt: Updated expectations.

Source/WebCore:

WPT tests were updated in r262254 and they already include the latest changes in the specs. Among others the
XR interface was renamed to XRSystem. We were already using that name in the C++ code but not in the JS interface.
The WPT update brings in another set of changes like the new XRLayer which is already not supported (I am
adding it soon in another patch). Last but not least, the new tests include checks for the XRPermissionStatus interface
which is not going to be implemented soon as it requires the Permission API which is not supported in WebKit yet. All in
all, this patch renames XR to XRSystem and marks as failing the XRLayer (temporarily) and XRPermissionStatus checks.

No new tests as there is no change in functionality.

* Modules/webxr/WebXRSystem.idl: Rename XR to XRSystem.
* bindings/js/WebCoreBuiltinNames.h: Ditto.

LayoutTests:

* platform/wpe/TestExpectations: Re-enable the idlharness.https.window.html test.

Canonical link: https://commits.webkit.org/226174@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263265 268f45cc-cd09-0410-ab3c-d52691b4dbfc