Source/WebCore/bindings/js/WebCoreBuiltinNames.h
@@ -245,7 +245,6 @@ namespace WebCore {
     macro(WorkletGlobalScope) \
     macro(WritableStream) \
     macro(XMLHttpRequest) \
-    macro(XR) \
     macro(XRBoundedReferenceSpace) \
     macro(XRFrame) \
     macro(XRInputSource) \
@@ -260,6 +259,7 @@ namespace WebCore {
     macro(XRSession) \
     macro(XRSessionEvent) \
     macro(XRSpace) \
+    macro(XRSystem) \
     macro(XRTest) \
     macro(XRView) \
     macro(XRViewerPose) \
